Added pagination for Apartment, Commercial, HouseAndTownhouse and for ResidentialComplex 'getAll' methods for better optimization.